Fix button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ a:hover {
   background-color: #666;
   color: #eee9de;
 }
+
 .btn {
-  align-self: left;
+  float: left;
 }
